Fix java17-build action